--- a/css/file.css
+++ b/css/file.css
@@ -2727,6 +2727,7 @@ ul.game-app__main__div4 li {
 
 
 
+
 .game-app__main__div2__right__div__menu>div {
     padding: 12px 20px;
     display: flex;
@@ -2811,3 +2812,23 @@ ul.game-app__main__div4 li {
     width: 20px;
     height: 20px;
 }
+
+
+
+
+
+
+
+
+
+/* --- START - SMARTWATCH */
+
+/* --- START - DONG HO */
+
+/* --- START - MAY CU GIA RE */
+
+/* --- START - PC/ MAY IN */
+
+/* --- START - SIM/ THE CAO */
+
+/* --- START - DICH VU TIEN ICH */
