--- a/css/file.css
+++ b/css/file.css
@@ -1039,47 +1039,55 @@ main > ul.option__promo {
 @media screen and (min-width: 1800px) {
     header{
         padding: 0 18%;
+        min-width: 1200px;
     }
     .footer__above {
         padding: 18px 18%;
+        min-width: 1200px;
     }
 
     .footer__below {
         padding: 18px 18%;
+        min-width: 1200px;
     }
     main  {
         padding: 0 18%;
+        min-width: 1200px;
     }
 }
 
-@media (min-width: 1180px) and (max-width: 1900px) {
+@media (min-width: 1300px) and (max-width: 1900px) {
     header {
         padding: 0 10%;
+        min-width: 1200px;
     }
     .footer__above {
         padding: 18px 10%;
+        min-width: 1200px;
     }
 
     .footer__below {
         padding: 18px 10%;
+        min-width: 1200px;
     }
     main {
         padding: 0 10%;
+        min-width: 1200px;
     }
 }
-@media (min-width: 1180px) and (max-width: 1900px) {
+@media (max-width: 1300px)  {
     header {
-        padding: 0 10%;
+        padding: 0 1%;
     }
     .footer__above {
-        padding: 18px 10%;
+        padding: 18px 1%;
     }
 
     .footer__below {
-        padding: 18px 10%;
+        padding: 18px 1%;
     }
     main {
-        padding: 0 10%;
+        padding: 0 1%;
     }
 }
 
@@ -2657,7 +2665,6 @@ ul.game-app__main__div4 li {
 
 .game-app__main__div2__left__div3>div>div>a {
     padding: 15px 80px;
-    background-color: green;
     text-align: center;
     display: flex;
     align-items: center;
@@ -2677,7 +2684,7 @@ ul.game-app__main__div4 li {
 .game-app-slick img {
     width: 100%;
     height: 220px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 .game-app-slick p {
@@ -2813,12 +2820,177 @@ ul.game-app__main__div4 li {
     height: 20px;
 }
 
+.game-app__main__div3 {
+    display: flex;
+    justify-content: space-between;
+}
+
+.game-app__main__div3__left {
+    
+    width: 76%;
+   
+}
+
+.game-app__main__div3__right {
+    width: calc(24% + 2px);
+}
+
+.game-app__main__div3__left>div:first-child {
+    height: 50px;
+    border: 1px solid #288AD6;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    box-shadow:#07A358;
+    border-right: none;
+    background-image: linear-gradient(to right, #f8f8f8, #f89406 ) ;
+    /* background-image: linear-gradient(to right, #FF845C 25%, #38AEC6 50%); */
+}
+
+.game-app__main__div3__left>ul:first-of-type {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    border: 1px solid #288AD6;;
+    border-top: none;
+    padding-bottom: 10px;;
+}
+
+.game-app__main__div3__left>ul:first-of-type li {
+    width: calc(98% / 2);
+    padding-bottom: 10px;;
+}
+
+.game-app__main__div3__left>ul:first-of-type li a img {
+    width: 100%;
+    height: 255px;
+}
+
+.game-app__main__div3__left>ul:first-of-type li a p:first-of-type {
+    font-weight: bold;
+    font-size: 20px;
+    margin-bottom: 10px;
+    margin-top: 7px;
+}
+
+.game-app__main__div3__left>ul:first-of-type li a p:last-child {
+    font-weight: normal;
+    font-size: 13px;
+    color: #818181;
+
+}
+.game-app__main__div3__left>ul:first-of-type li a p:last-child span:first-child {
+    margin-right: 10px;
+}
+
+.game-app__main__div3__left>ul:nth-child(3) {
+    padding: 10px;
+    border: 1px solid #288AD6;
+    border-top: none;
+}
+
+.game-app__main__div3__left>ul:nth-child(3) li {
+    border-bottom: 1px solid #288AD6;
+    padding: 10px 0;
+}
+
+.game-app__main__div3__left>ul:nth-child(3) li:last-child {
+
+    border: none;
+}
 
 
+.game-app__main__div3__left>ul:nth-child(3) li a  {
+    display: flex;
 
+}
 
+.game-app__main__div3__left>ul:nth-child(3) li a>div>p:first-child {
+    font-weight: bold;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
 
+.game-app__main__div3__left>ul:nth-child(3) li a>div>p:last-child {
+    color: #818181;
+    font-size: 12px;
+    margin-bottom: 10px;
+}
+.game-app__main__div3__left>ul:nth-child(3) li a p:last-child span:first-child {
+    margin-right: 20px;
+}
 
+.game-app__main__div3__left>ul:nth-child(3) li a img {
+    height: 85px;
+    width: 150px;
+    margin-right: 15px;;
+}
+
+.game-app__main__div3__left>div:last-child {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.game-app__main__div3__left>div>div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-self: center;
+    padding: 12px 80px;
+    color: #288AD6;
+    border: 1px solid #288AD6;
+    border-radius: 5px;
+    cursor: pointer;;
+}
+
+.game-app__main__div3__right h4 {
+    height: 50px;
+    background-color: #F89406;
+    line-height: 50px;
+    text-align: center;
+    color: white;
+    font-weight: normal;
+    font-size: 18px;
+    border: 1px solid #288AD6;
+    border-left: none;
+}
+
+.game-app__main__div3__right ul {
+    border: 1px solid #288AD6;
+    border-left: none;
+    border-top: none;
+    
+}
+
+.game-app__main__div3__right ul li  {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 12px 0;
+    border-bottom: 1px solid #288AD6;
+}
+.game-app__main__div3__right ul li:last-child {
+    border: none;
+}
+
+.game-app__main__div3__right ul li a{
+    display: flex;
+    
+    width: 90%;
+}
+
+.game-app__main__div3__right ul li a div{
+    height: 40px;
+    width: 40px;
+    background-color: #ddc9c9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 13px;
+    border-radius: 5px;
+    color: rgb(136, 108, 108);
+}
 
 
 /* --- START - SMARTWATCH */
